# computing_at_scale_git

./: .gitignore  Makefile  README.md  assignment0.cpp  assignment0.md  assignment0_driver.cpp  eye_mat.mm  mat.cpp  mat.hpp  mult.cpp  mult.hpp  result_col_vec.mm  result_mat.mm  result_row_vec.mm  test_mat.mm  test_row_vec.mm  vec.cpp  vec.hpp
assignment0/: mat.hpp  vec.hpp
assignment0/testing/: Makefile  assignment0_tester.cpp  test_col_vec.mm  test_identity_mat.mm  test_row_vec.mm  tests.cpp  tests.hpp
assignment1/: CMakeLists.txt  assignment1.md  polynomial_integrate.cpp  unit_tests.cpp
assignment1/FunctionLibrary/: CMakeLists.txt  Polynomial.cpp  Polynomial.hpp  ScalarFunction.hpp
assignment1/NumericalIntegrationLibrary/: CMakeLists.txt  IntegrationRule.cpp  IntegrationRule.hpp  NumericalIntegrator.cpp  NumericalIntegrator.hpp
assignment1/TestingLibrary/: CMakeLists.txt  TestingFunctions.cpp  TestingFunctions.hpp
testing/: Makefile  test_identity_mat.mm  test_rectangle_mat.mm  tests.hpp
